--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,3 +1,105 @@
+@use './var.scss' as var;
+
+html {
+    font-size: 10px;
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
+}
+
+.header-logo {
+    img {
+        width: 90%;
+    }
+}
+
+.header-nav {
+    font-size: 1.8rem;
+    font-weight: 600;
+   
+    &__list li {
+        position: relative;
+        padding: 0 1rem;
+        
+        &::before{
+            content:"";
+            display: block;
+            width: 100%;
+            height: 0px;
+            background-color: var.$baseBlue;
+            position: absolute;
+            top: -96%;
+            left: 0;
+            transition: all 0.3s ease;
+        }
+
+        &:hover::before{
+            height: 0.7rem;
+        }
+
+    }
+
+    &__btn {
+        padding: 1rem 2rem;
+        color:var.$baseBlue;
+        background-color: var.$bcgGrey;
+        border:none;
+        font-weight: 600;
+        font-size: 1.3rem;
+        position: relative;
+
+        span,i {
+            position: relative;
+            z-index: 999;
+        }
+
+        i {
+            font-size: 1.8rem;
+        }
+
+        &::before{
+            content:"";
+            display: block;
+            width: 0%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            transition: all 0.2s ease;
+        }
+
+        &:hover::before{
+            width: 100%;
+            background-color: var.$baseBlue;
+        }
+
+        &:hover{
+            color:white;
+        }
+    }
+
+    &__connection{
+        color:var.$secondaryBlue;
+        cursor: pointer;
+        position: relative;
+        padding: 0 1rem;
+
+        &::before{
+            content:"";
+            display: block;
+            width: 100%;
+            height: 0;
+            background-color: var.$secondaryBlue;
+            position: absolute;
+            top: -70%;
+            left: 0;
+            transition: all 0.3s ease;
+        }
+
+        &:hover::before{
+            height: 0.7rem;
+        }
+    }
+
 }
