--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,4 +1,5 @@
 @use './var.scss' as var;
+@use './mixin' as mixin;
 
 html {
     font-size: 10px;
@@ -23,15 +24,16 @@ body {
         padding: 0 1rem;
         
         &::before{
-            content:"";
-            display: block;
-            width: 100%;
+            // content:"";
+            // display: block;
+            // width: 100%;
             height: 0px;
             background-color: var.$baseBlue;
-            position: absolute;
+            // position: absolute;
             top: -96%;
             left: 0;
-            transition: all 0.3s ease;
+            // transition: all 0.3s ease;
+            @include mixin.pseudo-element-slide
         }
 
         &:hover::before{
@@ -221,6 +223,136 @@ body {
 
 }
 
+/** News */
+.spotlight {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.spotlight__article {
+
+    .img-wrapper {
+        overflow: hidden;
+    }
+
+    img {
+        width: 100%;
+        position: relative;
+        top: -2px;
+        left: 0;
+        cursor: pointer;
+        transition: all 0.3s ease;
+
+        &:hover{
+            transform: scale(1.1);
+        }
+        
+    }
+
+    @at-root .spotlight__content {
+        position: relative;
+        background-color: white;
+        padding:4rem 3rem;
+        width: 80%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-20%);
+
+        h2 {
+            position: absolute;
+            padding:1.1rem 2rem;
+            background-color: var.$bcgBlue; 
+            font-size: 1.6rem;   
+            top: -20px;
+            left: 30px;
+            transform: skewY(-5deg);
+            color: white;
+            font-weight: 600;
+        }
+
+        h3 {
+            font-size: 4.2rem;
+            font-weight: 900;
+            margin-bottom: 1rem;
+        }
+
+        p {
+            font-size: 1.5rem;
+        }
+        
+    }
+
+}
+
+.actuality {
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.actuality__article {
+    width: 40%;
+    .actuality__img {
+        position: relative;
+
+        .img-wrapper {
+            overflow: hidden;
+        }
+
+        &::before{
+            content:"";
+            display: block;
+            width: 1px;
+            height: 100%;
+            background-color: var.$bcgGrey;
+            position: absolute;
+            right: -7.4rem;
+            top: 0;
+        }
+    }
+
+    img {
+        width: 100%;
+        position: relative;
+        top: -2px;
+        left: 0;
+        cursor: pointer;
+        transition: all 0.3s ease;
+
+        &:hover{
+            transform: scale(1.1);
+        }
+        
+    }
+
+    @at-root .actuality__content {
+        position: relative;
+        background-color: white;
+        padding:2.5rem 1.2rem;
+        width: 85%;
+        left: 50%;
+        transform: translateX(-50%);
+
+        h2 {
+            position: absolute;
+            padding:1.1rem 2rem;
+            background-color: var.$bcgBlue; 
+            font-size: 1rem;   
+            top: -20px;
+            left: 30px;
+            transform: skewY(-5deg);
+            color: white;
+            font-weight: 600;
+            text-transform: uppercase;
+        }
+
+        h3 {
+            font-size: 1.8rem;
+            font-weight: 800;
+        }
+        
+    }
+}
 
 
 
