--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -18,12 +18,12 @@ body {
 .header-nav {
     font-size: 1.8rem;
     font-weight: 600;
-   
+
     &__list li {
         position: relative;
         padding: 0 1rem;
-        
-        &::before{
+
+        &::before {
             // content:"";
             // display: block;
             // width: 100%;
@@ -36,7 +36,7 @@ body {
             @include mixin.pseudo-element-slide
         }
 
-        &:hover::before{
+        &:hover::before {
             height: 0.7rem;
         }
 
@@ -44,14 +44,15 @@ body {
 
     &__btn {
         padding: 1rem 2rem;
-        color:var.$baseBlue;
+        color: var.$baseBlue;
         background-color: var.$bcgGrey;
-        border:none;
+        border: none;
         font-weight: 600;
         font-size: 1.3rem;
         position: relative;
 
-        span,i {
+        span,
+        i {
             position: relative;
             z-index: 999;
         }
@@ -60,8 +61,8 @@ body {
             font-size: 1.8rem;
         }
 
-        &::before{
-            content:"";
+        &::before {
+            content: "";
             display: block;
             width: 0%;
             height: 100%;
@@ -71,24 +72,24 @@ body {
             transition: all 0.2s ease;
         }
 
-        &:hover::before{
+        &:hover::before {
             width: 100%;
             background-color: var.$baseBlue;
         }
 
-        &:hover{
-            color:white;
+        &:hover {
+            color: white;
         }
     }
 
-    &__connection{
-        color:var.$secondaryBlue;
+    &__connection {
+        color: var.$secondaryBlue;
         cursor: pointer;
         position: relative;
         padding: 0 1rem;
 
-        &::before{
-            content:"";
+        &::before {
+            content: "";
             display: block;
             width: 100%;
             height: 0;
@@ -99,7 +100,7 @@ body {
             transition: all 0.3s ease;
         }
 
-        &:hover::before{
+        &:hover::before {
             height: 0.7rem;
         }
     }
@@ -110,7 +111,7 @@ body {
 .side-nav {
     font-weight: 600;
 
-    &__title{
+    &__title {
         font-size: 2rem;
         font-weight: 600;
     }
@@ -120,39 +121,39 @@ body {
     }
 
     &__locations {
-        gap:2.2rem;
+        gap: 2.2rem;
 
         li:hover .icon-location {
             filter: brightness(2)
         }
-    
+
         a {
             padding: 1.1rem;
-            background-color:#f4f3f3 ; 
+            background-color: #f4f3f3;
         }
-    
+
         .icon-location {
             font-size: 1.5rem;
-            color:var.$secondaryBlue;
+            color: var.$secondaryBlue;
         }
-    
+
         span {
-            color:var.$baseBlue;
+            color: var.$baseBlue;
         }
-    
+
     }
 
     &__map {
-        color:#e22c3f;
-        padding:5px;
+        color: #e22c3f;
+        padding: 5px;
         width: 40%;
         position: relative;
         font-size: 1.1rem;
         font-weight: 500;
-        
 
-        &::before{
-            content:"";
+
+        &::before {
+            content: "";
             display: block;
             width: 0%;
             height: 100%;
@@ -160,16 +161,16 @@ body {
             top: 0;
             left: 0;
             transition: all 0.3s ease;
-            z-index:-1;
+            z-index: -1;
         }
 
-        &:hover::before{
+        &:hover::before {
             width: 100%;
             background-color: #e22c3f;
         }
 
-        &:hover{
-            color:white;
+        &:hover {
+            color: white;
         }
     }
 
@@ -179,11 +180,11 @@ body {
         li {
             width: 95%;
             border-top: 2px solid var.$bcgGrey;
-            padding:1.5rem 0;
+            padding: 1.5rem 0;
             position: relative;
 
-            &::before{
-                content:"";
+            &::before {
+                content: "";
                 display: block;
                 width: 0;
                 height: 2px;
@@ -191,10 +192,10 @@ body {
                 top: -2px;
                 left: 0;
                 transition: all 0.3s ease;
-                background-color:var.$baseBlue;
+                background-color: var.$baseBlue;
             }
 
-            &:hover::before{
+            &:hover::before {
                 width: 100%;
             }
 
@@ -204,7 +205,7 @@ body {
         }
 
         a {
-           gap:1rem; 
+            gap: 1rem;
         }
 
         img {
@@ -244,25 +245,25 @@ body {
         cursor: pointer;
         transition: all 0.3s ease;
 
-        &:hover{
+        &:hover {
             transform: scale(1.1);
         }
-        
+
     }
 
     @at-root .spotlight__content {
         position: relative;
         background-color: white;
-        padding:4rem 3rem;
+        padding: 4rem 3rem;
         width: 80%;
         left: 50%;
         transform: translateX(-50%) translateY(-20%);
 
         h2 {
             position: absolute;
-            padding:1.1rem 2rem;
-            background-color: var.$bcgBlue; 
-            font-size: 1.6rem;   
+            padding: 1.1rem 2rem;
+            background-color: var.$bcgBlue;
+            font-size: 1.6rem;
             top: -20px;
             left: 30px;
             transform: skewY(-5deg);
@@ -279,7 +280,7 @@ body {
         p {
             font-size: 1.5rem;
         }
-        
+
     }
 
 }
@@ -287,11 +288,12 @@ body {
 .actuality {
     display: flex;
     justify-content: space-between;
-    
+
 }
 
 .actuality__article {
-    width: 40%;
+    width: 43%;
+
     .actuality__img {
         position: relative;
 
@@ -299,14 +301,14 @@ body {
             overflow: hidden;
         }
 
-        &::before{
-            content:"";
+        &::before {
+            content: "";
             display: block;
             width: 1px;
             height: 100%;
             background-color: var.$bcgGrey;
             position: absolute;
-            right: -7.4rem;
+            right: -5rem;
             top: 0;
         }
     }
@@ -319,25 +321,25 @@ body {
         cursor: pointer;
         transition: all 0.3s ease;
 
-        &:hover{
+        &:hover {
             transform: scale(1.1);
         }
-        
+
     }
 
     @at-root .actuality__content {
         position: relative;
         background-color: white;
-        padding:2.5rem 1.2rem;
+        padding: 2.5rem 1.2rem;
         width: 85%;
         left: 50%;
         transform: translateX(-50%);
 
         h2 {
             position: absolute;
-            padding:1.1rem 2rem;
-            background-color: var.$bcgBlue; 
-            font-size: 1rem;   
+            padding: 1.1rem 2rem;
+            background-color: var.$bcgBlue;
+            font-size: 1rem;
             top: -20px;
             left: 30px;
             transform: skewY(-5deg);
@@ -350,11 +352,93 @@ body {
             font-size: 1.8rem;
             font-weight: 800;
         }
-        
+
     }
 }
 
+/*********** aside *****************/
+
+.aside-news__list {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-left: 5rem;
+}
+
+.aside-news__item {
+    display: flex;
+    border-bottom: 1px solid var.$bcgGrey;
+    gap: 1.3rem;
+    padding: 1.5rem 0 2.5rem;
+    position: relative;
+    &::after {
+        background: #e22c3f;
+        bottom: 0;
+        content: "";
+        left: 1.6rem;
+        position: absolute;
+        top: 9.4rem;
+        width: 0.1rem;
+    }
+
+    .date,
+    .month {
+        font-size: 2.8rem;
+        font-weight: 600;
+        margin: 0;
+        height: 2.8rem;
+        line-height: 2.8rem;
+    }
+
+    .content-wrap {
+        display: flex;
+        flex-direction: column;
+        gap:1.2rem;
+    }
+
+    .content {
+        font-size: 1.5rem;
+    }
+
+    .aside__showmore-btn {
+        color: #e22c3f;
+        padding: 3px 10px;
+        width: 40%;
+        position: relative;
+        font-size: 1.5rem;
+        font-weight: 500;
 
 
+        &::before {
+            content: "";
+            display: block;
+            width: 0%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            transition: all 0.3s ease;
+            z-index: -1;
+        }
+
+        &:hover::before {
+            width: 100%;
+            background-color: #e22c3f;
+        }
+
+        &:hover {
+            color: white;
+        }
+
+    }
+
+    .aside-news__item-img {
+        width: 100%;
+        margin-top: 1rem;
+    }
 
 
+}
+
+/*******************main end**************/
+/*******************footer ***************/
