--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -164,13 +164,14 @@ body {
 .side-nav__services li:hover::before {
   width: 100%;
 }
-.side-nav__services li:hover img {
+.side-nav__services li:hover svg {
+  fill: white;
   background-color: #071f32;
 }
 .side-nav__services a {
   gap: 1rem;
 }
-.side-nav__services img {
+.side-nav__services svg {
   width: 20%;
   background-color: #e8e8e8;
   border-radius: 50%;
@@ -364,3 +365,198 @@ body {
 
 /*******************main end**************/
 /*******************footer ***************/
+.footer {
+  display: flex;
+}
+.footer-left {
+  flex: 2.5;
+  background-color: #fafbfb;
+}
+.footer-left .select-wrapper {
+  padding: 50px 0 40px 140px;
+  position: relative;
+}
+.footer-left .select-wrapper img {
+  width: 14.8rem;
+}
+.footer-left .select-wrapper select {
+  border: none;
+  outline: none;
+  background-color: #e8e8e8;
+  width: 35%;
+  margin-left: 3%;
+  padding: 1.6rem 4rem 1.6rem 2rem;
+  font-size: 1.3rem;
+  font-weight: 500;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+.footer-left .select-wrapper select option {
+  background-color: #fff;
+}
+.footer-left .select-wrapper i {
+  font-size: 2rem;
+  color: #e22c3f;
+  position: absolute;
+  pointer-events: none;
+  left: 58%;
+  top: 42%;
+}
+.footer-left .related-services {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  border-bottom: 2px solid #e8e8e8;
+  padding-bottom: 5rem;
+}
+.footer-left .related-services li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 30.5%;
+  position: relative;
+}
+.footer-left .related-services li:not(:last-of-type) {
+  border-right: 1px solid #e8e8e8;
+}
+.footer-left .related-services li span {
+  font-size: 1.5rem;
+  font-weight: 700;
+  display: block;
+}
+.footer-left .related-services li a {
+  font-size: 1.1rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #e22c3f;
+  padding: 8px 10px;
+  position: relative;
+  z-index: 999;
+}
+.footer-left .related-services li a::before {
+  content: "";
+  display: block;
+  width: 0%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: all 0.3s ease;
+  z-index: -1;
+  background-color: #e22c3f;
+}
+.footer-left .related-services li a:hover::before {
+  width: 100%;
+  background-color: #e22c3f;
+}
+.footer-left .related-services li a:hover {
+  color: white;
+}
+.footer-left .footer-nav {
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.footer-left .footer-nav__list {
+  display: flex;
+  justify-content: center;
+  padding: 2.4rem 7rem 2.6rem;
+  gap: 4rem;
+}
+.footer-left .footer-nav__list li {
+  cursor: pointer;
+  font-size: 1.1rem;
+}
+.footer-left .footer-nav__list li:hover {
+  color: #e22c3f;
+}
+
+.footer-right {
+  flex: 1.5;
+  background-color: #071f32;
+  color: #fff;
+  padding: 4rem 4rem 1rem;
+  font-size: 1.3rem;
+  font-weight: 400;
+  text-align: center;
+}
+.footer-right p {
+  margin-bottom: 1.5rem;
+}
+.footer-right input[type=email] {
+  border: none;
+  outline: none;
+  width: 63%;
+  padding: 1.8rem;
+  margin-right: 1.5rem;
+}
+.footer-right button {
+  padding: 1.8rem;
+  color: white;
+  background-color: #e22c3f;
+  border: none;
+  outline: none;
+  font-weight: 700;
+  position: relative;
+}
+.footer-right button span {
+  position: relative;
+  z-index: 999;
+}
+.footer-right button::before {
+  content: "";
+  display: block;
+  width: 0%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: all 0.3s ease;
+  background-color: white;
+}
+.footer-right button:hover::before {
+  width: 100%;
+}
+.footer-right button:hover {
+  color: #e22c3f;
+}
+.footer-right p:nth-of-type(2) {
+  margin-top: 3rem;
+}
+.footer-right .social-icons {
+  display: flex;
+  font-size: 2rem;
+  justify-content: center;
+  gap: 3rem;
+  margin-bottom: 3rem;
+}
+.footer-right p:nth-of-type(3) {
+  font-size: 1.6rem;
+}
+.footer-right > a {
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  color: #e22c3f;
+  font-weight: 400;
+  position: relative;
+  z-index: 999;
+  padding: 1rem;
+}
+.footer-right > a::before {
+  content: "";
+  display: block;
+  width: 0%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: all 0.3s ease;
+  z-index: -1;
+}
+.footer-right > a:hover::before {
+  width: 100%;
+  background-color: #e22c3f;
+}
+.footer-right > a:hover {
+  color: white;
+}
